--- a/conf/application.conf
+++ b/conf/application.conf
@@ -198,6 +198,12 @@ play.evolutions {
   #db.default.enabled = false
 }
 
+//play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+
+play.filters.hosts {
+  allowed = ["."]
+}
+
 ## Database Connection Pool
 # https://www.playframework.com/documentation/latest/SettingsJDBC
 # ~~~~~
